--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Home Page</h1>
-<a href="/login">Login</a>
-<a href="/signup">Sign Up</a>
+
 </body>
 </html>
